Implemented Pan/Zoom in editor and option to save decision graph.

--- a/elements/oe-feel-component.html
+++ b/elements/oe-feel-component.html
@@ -18,6 +18,9 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 --knowledge-source-color: #0099ff;
             }
 
+            *{
+                user-select: none;
+            }
             .component-header {
                 height: 30px;
                 padding: 0px 8px;
