--- a/elements/oe-feel-connection-setting.html
+++ b/elements/oe-feel-connection-setting.html
@@ -82,6 +82,10 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                     },
                     'knowledge-requirement': {
                         'BUSINESS_MODEL': ['DECISION_TABLE', 'BUSINESS_MODEL', 'BOXED_INVOCATION']
+                    },
+                    'authority':{
+                        'KNOWLEDGE_SOURCE':['DECISION_TABLE', 'BUSINESS_MODEL','KNOWLEDGE_SOURCE'],
+                        'DECISION_TABLE':['KNOWLEDGE_SOURCE']
                     }
                 }
                 var associtaions = [{
