--- a/elements/oe-feel-connector.html
+++ b/elements/oe-feel-connector.html
@@ -52,7 +52,15 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 background: var(--connector-color);
                 border-radius: 5px;
             }
-
+            .dashed-gradient{
+                height: 100px;
+                width: 200px;
+                padding: 10px;
+                background-image: linear-gradient(to right, blue 50%, transparent 50%), linear-gradient(to right, blue 50%, transparent 50%), linear-gradient(to bottom, blue 50%, transparent 50%), linear-gradient(to bottom, blue 50%, transparent 50%);
+                background-position: left top, left bottom, left top, right top;
+                background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+                background-size: 20px 3px, 20px 3px, 3px 20px, 3px 20px;
+            }
         </style>
         <div class$="line [[connection.type]]" on-dblclick="_editConnection">
             <div id="arrow"></div>
